cabal-version: 2.4

name:           lightstep-haskell
version:        0.10.4
synopsis:       LightStep OpenTracing client library
description:    LightStep OpenTracing client library.
category:       Tools
homepage:       https://github.com/ethercrow/lightstep-haskell#readme
bug-reports:    https://github.com/ethercrow/lightstep-haskell/issues
maintainer:     Dmitry Ivanov <ethercrow@gmail.com>
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/ethercrow/lightstep-haskell

common options
  default-extensions:
    BangPatterns
    BlockArguments
    DataKinds
    FlexibleInstances
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    ViewPatterns
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -fhide-source-paths
    -ferror-spans
    -freverse-errors
  default-language: Haskell2010

library
  import: options
  exposed-modules:
      LightStep.HighLevel.IO
      LightStep.Internal.Debug
      LightStep.Diagnostics
      LightStep.Propagation
      Network.Wai.Middleware.LightStep
  other-modules:
      Paths_lightstep_haskell
  autogen-modules:
      Paths_lightstep_haskell
  hs-source-dirs: src
  build-depends:
      base >=4.12 && <5
    , ghc-prim
    , async
    , bytestring
    , chronos
    , containers
    , hashable
    , http-types
    , mtl
    , random >= 1.2
    , exceptions
    , stm
    , text
    , transformers
    , unordered-containers
    , wai
    , jsonifier
    , opentelemetry
    , opentelemetry-extra
    , opentelemetry-lightstep

flag examples
  description: Build example executables
  default: False

common example
  if flag(examples)
    buildable: True
  else
    buildable: False

executable lightstep-haskell-example
  import: options, example
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
  main-is: Main.hs
  hs-source-dirs:
      examples/readme
  build-depends:
      base >=4.9 && <5
    , async
    , lightstep-haskell
    , text

executable lightstep-haskell-wai-example
  import: options, example
  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N -T -s"
  main-is: Main.hs
  hs-source-dirs:
      examples/wai
  build-depends:
      base >=4.9 && <5
    , lightstep-haskell
    , http-types
    , text
    , wai
    , warp
    , bytestring

executable lightstep-haskell-req-example
  import: options, example
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
  main-is: Main.hs
  hs-source-dirs:
      examples/req
  build-depends:
      base >=4.9 && <5
    , lightstep-haskell
    , case-insensitive
    , http-types
    , text
    , req >= 3.0.0
    , unordered-containers

executable lightstep-haskell-stress-test
  import: options
  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N -T -s"
  main-is: Main.hs
  hs-source-dirs:
      stress-test
  build-depends:
      base >=4.9 && <5
    , lightstep-haskell
    , text
    , async

